feat(block-compiler): add Java adapter
Add the Java language adapter (§5.4.1), the third of the four P0
adapters.

- scanJava is a scanner written from JLS §3, following javac where the
  specification leaves room: `>>` stays one token, text blocks are one
  token, and `0b12` is accepted by the tokenizer.
- Unicode escapes are rejected on the raw source before the scanner
  runs (`unicode-escape`), because javac translates them before lexing
  and scanJava does not. A test with an escape plus other lexical
  errors asserts that only unicode-escape is reported; removing the
  pre-pass fails 2 tests.
- scripts/java-reference (pnpm java:golden) checks that each fixture is
  google-java-format output and that the wrap/format/unwrap round trip
  is idempotent, then records javac's own tokenizer output for 7
  fixtures and 157 token pairs. Tests pin scanJava to that golden data
  with a source hash, so CI needs no Java toolchain.
- javaAdapter declares 2-space indentation without alignment and uses
  the shared classifySeparator. The scanner-error branch is not
  expected for Java: a search of 532 pairs found no join that javac
  splits into [A, B] while reporting an error; the reasoning is
  documented in java.ts and asserted over the golden pairs.
- Seven fixtures (equals with a pattern, streams with method references
  and lambdas, try-with-resources and multi-catch, varargs and
  wildcards, a switch expression with yield, literals, nested generics)
  are compared with hand-verified atoms. Text blocks fail with
  multiline-token, and the core pairing checks are reachable.

docs/requirements.md v1.5 records the Java lexing deviation (§9.1) and
the Java-specific constraints (§5.4.1, Appendix B).

This also adds the java:golden script to package.json (go:golden added
in b3c7294) and exports javaAdapter from index.ts changed in c8c8aa3.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>