@@ -2,10 +2,10 @@
 
 | Field | Value |
 | --- | --- |
-| Version | 1.4 |
+| Version | 1.5 |
 | Language of record | **English** (all deliverables from this point on) |
 | Status | **Settled.** No open items; ready to implement |
-| Supersedes | v1.3 — Go adapter lexing, Go block shape, whitespace and token constraints (Appendix B) |
+| Supersedes | v1.4 — Java adapter lexing and Java-specific constraints (Appendix B) |
 
 **Legend**
 
@@ -530,7 +530,7 @@ Recommended implementation order is **TypeScript → Go → Java → Python**, e
 | --- | --- |
 | **TypeScript** | Generic `<>` is not auto-paired (§3.3.3). Template literals `` `${x}` `` nest, so pairing must work on lexer tokens. `=>` stays two keystrokes; font ligatures are disabled (§8.2) |
 | **Go** | Line breaks are **semantically significant** — the compiler inserts semicolons at line ends — so every end-of-line separator is `required`. A brace on the following line is a syntax error, so generated blocks are fixed to `gofmt` output. Go's native indentation is tabs; blocks are **normalized to spaces** to remove tab-width variation between environments. Normalization converts each leading tab to **4 spaces**, and gofmt's alignment spaces become `padding` atoms (§3.3.3). Because gofmt inserts blank lines between top-level declarations of different kinds, a Go block holds **exactly one top-level declaration** 🟡 (v1.4) |
-| **Java** | Verbose, so blocks hit the 30-line cap quickly. Favor **single methods** over whole `import` + class listings. The `@` in annotations is a shifted symbol (cost weight 1.5) |
+| **Java** | Verbose, so blocks hit the 30-line cap quickly. Favor **single methods** over whole `import` + class listings. The `@` in annotations is a shifted symbol (cost weight 1.5). Blocks are google-java-format output (2-space indentation, no alignment spaces) holding exactly one member, because the formatter inserts blank lines between members. Text blocks are excluded in P0: they always span lines and fail with `multiline-token`. Unicode escapes (`\uXXXX`) are forbidden anywhere in the source (`unicode-escape`), because javac translates them before lexing, so the displayed characters would not match the tokens 🟡 (v1.5) |
 | **Python** | The hardest case, because indentation is syntax.<br>• Dedents cannot be expressed by the player, so the canonical indentation is fully precomputed as `auto` atoms.<br>• A line break after `:` is always a required Enter separator.<br>• Compound keywords such as `not in` and `is not` fall out of §3.3.1 as `required = true` automatically.<br>• f-strings embed expressions inside a string token; pair detection must run on the whole token.<br>• Blank lines are forbidden inside blocks (§5.1), which also avoids ambiguity about indentation after them |
 
 ---
@@ -678,7 +678,7 @@ Taking the browser's time zone on every request would make past daily and weekly
 | Validation | **Zod** in a shared contracts package | One schema definition shared by the frontend, the API, and the content CLI |
 | ORM | **TypeORM** 🔵 | Chosen. See §9.2 for the specific cautions this implies |
 | Database | **PostgreSQL 16** | Needs `date` columns, composite indexes, and `jsonb`. Runs acceptably on constrained hardware with the tuning in §9.7 |
-| Lexing | **tree-sitter**, content CLI only. The `block-compiler` TypeScript adapter uses the official `typescript` package, and the Go adapter a scanner checked against `go/scanner`, instead 🟡 (v1.2, v1.4, see below) | Official grammars for all four initial languages, error recovery for fragments, and a de facto standard (GitHub, Neovim, Zed). Never shipped to the browser |
+| Lexing | **tree-sitter**, content CLI only. The `block-compiler` TypeScript adapter uses the official `typescript` package, the Go adapter a scanner checked against `go/scanner`, and the Java adapter a scanner checked against javac, instead 🟡 (v1.2, v1.4, v1.5, see below) | Official grammars for all four initial languages, error recovery for fragments, and a de facto standard (GitHub, Neovim, Zed). Never shipped to the browser |
 | Auth | Cookie session + **Argon2id** | §7 |
 | Testing | **Vitest**, **fast-check** (property-based), **Playwright** | The engine's input space is combinatorial, so property-based tests carry most of the weight |
 | Containers | **Docker** + Compose, multi-arch via `buildx` | One image tag serving both amd64 and arm64 |
@@ -688,6 +688,8 @@ Taking the browser's time zone on every request would make past daily and weekly
 **Deviation (v1.2): lexing in the TypeScript adapter.** The `block-compiler` TypeScript adapter tokenizes with the official `typescript` package rather than tree-sitter. tree-sitter is a parser that builds a syntax tree; it offers no lexer entry point for the token-level operation §3.3.1 depends on — joining two tokens and re-lexing the result to check whether it still yields exactly `[A, B]`. The TypeScript compiler exposes precisely that operation through its scanner (`createScanner`, with `reScanGreaterToken`, `reScanTemplateToken`, and `reScanSlashToken` for context-dependent tokens), and its parser supplies context-correct token boundaries, such as `>>` closing two type-argument lists rather than forming a shift operator. The package is pure JavaScript and, like every `block-compiler` dependency, never enters the browser bundle. It is pinned to TypeScript 6.x because TypeScript 7 no longer ships this JavaScript API. Adapters for other languages choose their lexer individually. The content pipeline is unchanged: `tools/content-cli` still uses tree-sitter to syntax-check fragments (§5.2).
 
 **Deviation (v1.4): lexing in the Go adapter.** No JavaScript port of `go/scanner` exists, and tree-sitter cannot re-lex token pairs (see above), so the Go adapter uses a scanner written from the lexical elements of the Go specification. `packages/block-compiler/scripts/go-reference`, run with `pnpm --filter @typing-trainer/block-compiler go:golden`, checks that every Go fixture is byte-for-byte `gofmt` output and records the official `go/scanner` tokens for each fixture and for a table of token pairs. Tests compare the TypeScript scanner against that committed golden data, so CI needs no Go toolchain. Without a parser, the Go adapter reports lexical errors and an opening brace on its own line; grammar errors are left to `tools/content-cli` (§5.2).
+
+**Deviation (v1.5): lexing in the Java adapter.** No maintained JavaScript lexer matches javac token for token: `java-parser` (chevrotain) keeps `>>` as two tokens and exposes its lexer only through the parser, prettier-plugin-java moved to tree-sitter, and the ANTLR grammars-v4 Java lexer does not fuse `>>` either. The Java adapter therefore uses a scanner written from JLS §3. `packages/block-compiler/scripts/java-reference`, run with `pnpm --filter @typing-trainer/block-compiler java:golden`, checks that each fixture is google-java-format output (wrapping the member in a class, formatting, and unwrapping reproduces it, and repeating the round trip changes nothing), then records javac's own tokenizer output (internal API, reached with `--add-exports`) for each fixture and for a table of token pairs. Tests compare the TypeScript scanner against that committed golden data, so CI needs no Java toolchain. Unicode escapes are rejected on the raw source before the scanner runs.
 
 ### 9.2 Working with TypeORM
 
@@ -985,3 +987,5 @@ These are industry articles and community measurements rather than peer-reviewed
 | 1.4 | Go adapter lexing | A scanner written from the Go specification, pinned to the official `go/scanner` by golden data committed from `go:golden`; CI runs without Go (§9.1) |
 | 1.4 | Go block shape | Blocks are gofmt output with leading tabs normalized to 4 spaces, gofmt alignment kept as `padding`, and exactly one top-level declaration, because gofmt inserts blank lines between declarations of different kinds (§5.4.1) |
 | 1.4 | Whitespace and token constraints | A run of spaces between tokens is a compile error unless the language's formatter aligns code (gofmt → `padding`); a token spanning lines is a compile error. Both are enforced by the language-neutral compiler core, so they apply to every adapter without adapter-specific code (§5.1) |
+| 1.5 | Java adapter lexing | A scanner written from JLS §3, pinned to javac's tokenizer by golden data committed from `java:golden`, which also checks that fixtures survive a google-java-format wrap/format/unwrap round trip idempotently; CI runs without Java (§9.1) |
+| 1.5 | Java-specific constraints | **Additional constraints found during P0 implementation of the Java adapter:** Unicode escapes are rejected with `unicode-escape` before lexing (javac translates them first, so display and tokens would diverge); text blocks are excluded in P0; a block holds exactly one member (§5.4.1) |
